| Bug #5887 | Triggers with string literals cause errors | ||
|---|---|---|---|
| Submitted: | 5 Oct 2004 0:53 | Modified: | 8 Oct 2004 11:25 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Dmitry Lenev | CPU Architecture: | Any |
[5 Oct 2004 9:15]
MySQL Verification Team
Verified with 5.0.2-alpha-debug
[8 Oct 2004 11:25]
Dmitry Lenev
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
ChangeSet 1.1643 2004/10/08 15:16:03 dlenev@brandersnatch.localdomain
Fix for bug #5887 "Triggers with string literals cause errors"
Fixed small error in new .FRM parser which caused it to handle
improperly escaped strings.

Description: A trigger containing a string literal causes an error message. If a trigger contains only a numeric literal, there's no error message. How to repeat: mysql> create table x1 (x1col char);// Query OK, 0 rows affected (0.90 sec) mysql> create trigger tx1 before insert on x1 for each row set new.x1col = 'x';// Query OK, 0 rows affected (0.00 sec) mysql> insert into x1 values ('y')// ERROR 1343 (HY000): Error while parsing parameter 'triggers' (line: 'triggers='create trigger tx1 before insert on x1 for each row set new.x1col = \'x\'' ') mysql> create table x2 (x2col int); -> // Query OK, 0 rows affected (0.31 sec) mysql> create trigger tx2 before insert on x2 for each row set new.x2col = 5;// Query OK, 0 rows affected (0.00 sec) mysql> insert into x2 values (5)// Query OK, 1 row affected (0.00 sec)