Fix for bug #5887 "Triggers with string literals cause errors"

Fixed small error in new .FRM parser which caused it to handle 
improperly escaped strings.